[package]
name = "quadbin"
version = "0.1.0"
authors = ["Anatoly Tsyplenkov <atsyplenkov@fastmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/atsyplenkov/quadbin"
description = "Encoding and decoding geographical coordinates to and from QuadBin, a tiling approach developed by Carto. An improved version of Microsoft's Bing Maps Tile System, aka Quadkey."
keywords = ["quadbin", "spatial", "spatial-index", "quadkey"]
categories = ["data-structures", "algorithms", "science::geo"]

[dependencies]

[dev-dependencies]
approx = "0.5.1"
