[package]
name = "quadbin"
version = "0.1.0"
authors = ["Anatoly Tsyplenkov <atsyplenkov@fastmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/atsyplenkov/quadbin"
description = "Encoding and decoding geographical coordinates to and from QuadBin, a hierarchical geospatial indexing system for square cells in Web Mercator projection developed by Carto. An improved version of Microsoft's Bing Maps Tile System, aka Quadkey."
keywords = ["quadbin", "quadkey", "spatial", "spatial-index"]
categories = ["data-structures", "science::geo"]

[dependencies]

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
rand = "0.9.1"

[[bench]]
name = "morton_benchmarks"
harness = false