[package]
name = "qbin"
version = "0.2.0"
authors = ["Anatoly Tsyplenkov <atsyplenkov@fastmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/atsyplenkov/qbin"
homepage = "https://github.com/atsyplenkov/qbin"
documentation = "https://docs.rs/qbin"
readme = "README.md"
description = "Encoding and decoding geographical coordinates to and from Quadbin, a hierarchical geospatial indexing system for square cells in Web Mercator projection developed by Carto. An improved version of Microsoft's Bing Maps Tile System, aka Quadkey."
keywords = ["quadbin", "quadkey", "spatial", "spatial-index"]
categories = ["data-structures", "science::geo"]

[dependencies]

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
h3o = "0.8.0"

[[bench]]
name = "main"
harness = false
